서비스페이지 이미지 반응형 수정

--- a/service.html
+++ b/service.html
@@ -174,7 +174,7 @@
         <!-- 9열 3칸 -->
         <div class="grid row-9">
             <div class="cell"></div>
-            <div class="cell persona-image-cell">
+            <div class="cell persona-image-cell right">
                 <span class="fade-box scroll-hidden">
                     <div class="persona-image-container">
                         <img src="./img/service/persona02.png" alt="페르소나 이미지 2" class="persona-img" />
@@ -200,7 +200,7 @@
         <!-- 11열 3칸 -->
         <div class="grid row-11">
             <div class="cell"></div>
-            <div class="cell persona-image-cell">
+            <div class="cell persona-image-cell right">
                 <span class="fade-box scroll-hidden">
                     <div class="persona-image-container">
                         <img src="./img/service/persona04.png" alt="페르소나 이미지 4" class="persona-img" />
