전체적인 수정

--- a/app.html
+++ b/app.html
@@ -140,10 +140,10 @@
 
             <div class="cell app-image-cell fade-box scroll-hidden">
                 <div class="app-image-wrapper">
-                    <img src="./img/app/iphone.png" alt="앱 화면 1" class="app-image active" id="app-image-1">
-                    <img src="/placeholder.svg?height=400&width=300" alt="앱 화면 2" class="app-image" id="app-image-2">
-                    <img src="/placeholder.svg?height=400&width=300" alt="앱 화면 3" class="app-image" id="app-image-3">
-                    <img src="/placeholder.svg?height=400&width=300" alt="앱 화면 4" class="app-image" id="app-image-4">
+                    <img src="./gif/app-ani1.gif" alt="앱 화면 1" class="app-image active" id="app-image-1">
+                    <img src="./gif/app-ani2.gif" alt="앱 화면 2" class="app-image" id="app-image-2">
+                    <img src="./gif/app-ani3.gif" alt="앱 화면 3" class="app-image" id="app-image-3">
+                    <img src="./gif/app-ani4.gif" alt="앱 화면 4" class="app-image" id="app-image-4">
                 </div>
             </div>
             <div class="cell"></div>
