--- a/firstbirthday.html
+++ b/firstbirthday.html
@@ -22,7 +22,7 @@
     <link href="./css/reset.css" rel="stylesheet" />
     <link href="./css/funeral.css" rel="stylesheet" />
   </head>
-  <body>
+  <body class="firstbirthday-page">
     <!-- 메인 섹션 -->
     <section class="main-section" id="main">
       <!-- 1열 3칸 -->
@@ -142,7 +142,7 @@
           <span class="fade-box scroll-hidden">
             <div class="visual-stack">
               <img
-                src="./img/funeral/kiosk.png"
+                src="./img/firstbirthday/kiosk.png"
                 alt="키오스크 이미지"
                 class="kiosk-img"
               />
@@ -177,25 +177,25 @@
         <div class="cell memorial-image-cell fade-box scroll-hidden">
           <div class="memorial-image-wrapper">
             <img
-              src="./img/firstbirthday/firstbirth01.png"
+              src="./gif/first-pro1_1.gif"
               alt="돌잔치 이미지 1"
               class="memorial-image active"
               id="memorial-image-1"
             />
             <img
-              src="./img/firstbirthday/firstbirth02.png"
+              src="./gif/first-pro2_1.gif"
               alt="돌잔치 이미지 2"
               class="memorial-image"
               id="memorial-image-2"
             />
             <img
-              src="./img/firstbirthday/firstbirth03.png"
+              src="./gif/first-pro3_1.gif"
               alt="돌잔치 이미지 3"
               class="memorial-image"
               id="memorial-image-3"
             />
             <img
-              src="./img/firstbirthday/firstbirth04.png"
+              src="./gif/first-pro4_1.gif"
               alt="돌잔치 이미지 4"
               class="memorial-image"
               id="memorial-image-4"
