--- a/weding.html
+++ b/weding.html
@@ -22,7 +22,7 @@
     <link href="./css/reset.css" rel="stylesheet" />
     <link href="./css/funeral.css" rel="stylesheet" />
   </head>
-  <body>
+  <body class="wedding-page">
     <!-- 메인 섹션 -->
     <section class="main-section" id="main">
       <!-- 1열 3칸 -->
@@ -152,7 +152,7 @@
           <span class="fade-box scroll-hidden">
             <div class="visual-stack">
               <img
-                src="./img/funeral/kiosk.png"
+                src="./img/weding/kiosk.png"
                 alt="키오스크 이미지"
                 class="kiosk-img"
               />
@@ -190,23 +190,23 @@
             <img
               alt="결혼식 이미지 1"
               class="memorial-image active"
-              src="./img/weding/weding1.png"
+              src="./gif/wedding-pro1_1.gif"
               id="memorial-image-1"
             />
             <img
-              src="./img/weding/weding2.png"
+              src="./gif/wedding-pro2_1.gif"
               alt="결혼식 이미지 2"
               class="memorial-image"
               id="memorial-image-2"
             />
             <img
-              src="./img/weding/weding3.png"
+              src="./gif/wedding-pro3_1.gif"
               alt="결혼식 이미지 3"
               class="memorial-image"
               id="memorial-image-3"
             />
             <img
-              src="./img/weding/weding4.png"
+              src="./gif/wedding-pro4_1.gif"
               alt="결혼식 이미지 4"
               class="memorial-image"
               id="memorial-image-4"
