--- a/funeral.html
+++ b/funeral.html
@@ -10,7 +10,7 @@
     <link href="./css/reset.css" rel="stylesheet">
     <link href="./css/funeral.css" rel="stylesheet">
 </head>
-<body>
+<body class="funeral-page">
     <!-- 메인 섹션 -->
     <section class="main-section" id="main">
         <!-- 1열 3칸 -->
@@ -47,7 +47,7 @@
                 <span class="fade-box scroll-hidden">
                     <div class="main-image-section">
                         <div class="main-image active" id="main-image-1">
-                            <img src="./gif/funeral-1.gif" alt="부조금 보내기" class="tab-image">
+                            <img src="./gif/funeral-1.gif" alt="부의금 보내기" class="tab-image">
                         </div>
                         <div class="main-image" id="main-image-2">
                             <img src="./gif/funeral-2.gif" alt="축하메세지" class="tab-image">
@@ -69,11 +69,11 @@
                     <div class="tab-options-grid">
                         <div class="tab-option-row active" data-tab="1">
                             <span class="option-number">01</span>
-                            <span class="option-text">부조금 보내기</span>
+                            <span class="option-text">부의금 보내기</span>
                         </div>
                         <div class="tab-option-row" data-tab="2">
                             <span class="option-number">02</span>
-                            <span class="option-text">디지털추모관</span>
+                            <span class="option-text">디지털 추모관</span>
                         </div>
                         <div class="tab-option-row" data-tab="3">
                             <span class="option-number">03</span>
@@ -86,7 +86,7 @@
                 <span class="fade-box scroll-hidden">
                     <div class="tab-description">
                         <div class="description-content active" id="description-1">
-                            <p>JO;IN의 장례식 부조금 보내기 서비스는 상주를 선택하여 고인을 추모하는 마음을 전할 수 있도록 돕습니다. 카드 결제는 물론, 간편결제 등 여러 수단을 통해 빠르고 편리하게 부조금을 보낼 수 있어, 누구나 부담 없이 이용할 수 있습니다.</p>
+                            <p>JO;IN의 장례식 부의금 보내기 서비스는 상주를 선택하여 고인을 추모하는 마음을 전할 수 있도록 돕습니다. 카드 결제는 물론, 간편결제 등 여러 수단을 통해 빠르고 편리하게 부의금을 보낼 수 있어, 누구나 부담 없이 이용할 수 있습니다.</p>
                         </div>
                         <div class="description-content" id="description-2">
                             <p>하객들은 QR 코드를 스캔해 고인을 추모하는 마음을 담은 메시지를 디지털로 남길 수 있습니다. 사진과 글을 함께 첨부할 수 있으며, 이렇게 남겨진 모든 메시지는 키오스크는 물론 상주의 전용 앱에서도 모아 볼 수 있어, 조문객들의 마음을을 언제든지 다시 확인할 수 있습니다.</p>
@@ -137,10 +137,10 @@
             <div class="cell"></div>
             <div class="cell memorial-image-cell fade-box scroll-hidden">
                 <div class="memorial-image-wrapper">
-                    <img src="./img/funeral/funeral1.png" alt="장례식 이미지 1" class="memorial-image active" id="memorial-image-1">
-                    <img src="./img/funeral/funeral2.png" alt="장례식 이미지 2" class="memorial-image" id="memorial-image-2">
-                    <img src="./img/funeral/funeral3.png" alt="장례식 이미지 3" class="memorial-image" id="memorial-image-3">
-                    <img src="./img/funeral/funeral4.png" alt="장례식 이미지 4" class="memorial-image" id="memorial-image-4">
+                    <img src="./gif/funeral-pro1_1.gif" alt="장례식 이미지 1" class="memorial-image active" id="memorial-image-1">
+                    <img src="./gif/funeral-pro2_1.gif" alt="장례식 이미지 2" class="memorial-image" id="memorial-image-2">
+                    <img src="./gif/funeral-pro3_1.gif" alt="장례식 이미지 3" class="memorial-image" id="memorial-image-3">
+                    <img src="./gif/funeral-pro4_1.gif" alt="장례식 이미지 4" class="memorial-image" id="memorial-image-4">
                 </div>
             </div>
             <div class="cell memorial-steps-cell">
