--- a/funeral.html
+++ b/funeral.html
@@ -154,7 +154,7 @@
                         </div>
                         <div class="step-content">
                             <div class="step-panel active" id="step-panel-1">
-                                <h3>사용자의 필요와 편의에 맞춘<br><br> 첫 화면</h3>
+                                <h3>사용자의 필요와 편의에 맞춘 첫 화면</h3>
                                 <p>가독성 높은 폰트 사이즈와 무게, 그리고 직관적인 버튼을 보여줍니다. 사용자는 니즈에 따라 일반 모드와 큰글씨 모드를 선택할 수 있습니다.</p>
                             </div>
                             <div class="step-panel" id="step-panel-2">
