무거운 gif파일 수정

--- a/firstbirthday.html
+++ b/firstbirthday.html
@@ -66,21 +66,21 @@
             <div class="main-image-section">
               <div class="main-image active" id="main-image-1">
                 <img
-                  src="./gif/first-1.gif"
+                  src="./gif/first-1.webp"
                   alt="축하금 보내기"
                   class="tab-image"
                 />
               </div>
               <div class="main-image" id="main-image-2">
                 <img
-                  src="./gif/first-2.gif"
+                  src="./gif/first-2.webp"
                   alt="축하메세지"
                   class="tab-image"
                 />
               </div>
               <div class="main-image" id="main-image-3">
                 <img
-                  src="./gif/first-3.gif"
+                  src="./gif/first-3.webp"
                   alt="위시리스트"
                   class="tab-image"
                 />
@@ -177,25 +177,25 @@
         <div class="cell memorial-image-cell fade-box scroll-hidden">
           <div class="memorial-image-wrapper">
             <img
-              src="./gif/first-pro1_1.gif"
+              src="./gif/first-pro1_1.webp"
               alt="돌잔치 이미지 1"
               class="memorial-image active"
               id="memorial-image-1"
             />
             <img
-              src="./gif/first-pro2_1.gif"
+              src="./gif/first-pro2_1.webp"
               alt="돌잔치 이미지 2"
               class="memorial-image"
               id="memorial-image-2"
             />
             <img
-              src="./gif/first-pro3_1.gif"
+              src="./gif/first-pro3_1.webp"
               alt="돌잔치 이미지 3"
               class="memorial-image"
               id="memorial-image-3"
             />
             <img
-              src="./gif/first-pro4_1.gif"
+              src="./gif/first-pro4_1.webp"
               alt="돌잔치 이미지 4"
               class="memorial-image"
               id="memorial-image-4"
