--- a/funeral.html
+++ b/funeral.html
@@ -47,13 +47,13 @@
                 <span class="fade-box scroll-hidden">
                     <div class="main-image-section">
                         <div class="main-image active" id="main-image-1">
-                            <img src="./gif/funeral-1.gif" alt="부의금 보내기" class="tab-image">
+                            <img src="./gif/funeral-1.webp" alt="부의금 보내기" class="tab-image">
                         </div>
                         <div class="main-image" id="main-image-2">
-                            <img src="./gif/funeral-2.gif" alt="축하메세지" class="tab-image">
+                            <img src="./gif/funeral-2.webp" alt="축하메세지" class="tab-image">
                         </div>
                         <div class="main-image" id="main-image-3">
-                            <img src="./gif/funeral-3.gif" alt="고인 정보 열람" class="tab-image">
+                            <img src="./gif/funeral-3.webp" alt="고인 정보 열람" class="tab-image">
                         </div>
                     </div>
                 </span>
@@ -137,10 +137,10 @@
             <div class="cell"></div>
             <div class="cell memorial-image-cell fade-box scroll-hidden">
                 <div class="memorial-image-wrapper">
-                    <img src="./gif/funeral-pro1_1.gif" alt="장례식 이미지 1" class="memorial-image active" id="memorial-image-1">
-                    <img src="./gif/funeral-pro2_1.gif" alt="장례식 이미지 2" class="memorial-image" id="memorial-image-2">
-                    <img src="./gif/funeral-pro3_1.gif" alt="장례식 이미지 3" class="memorial-image" id="memorial-image-3">
-                    <img src="./gif/funeral-pro4_1.gif" alt="장례식 이미지 4" class="memorial-image" id="memorial-image-4">
+                    <img src="./gif/funeral-pro1_1.webp" alt="장례식 이미지 1" class="memorial-image active" id="memorial-image-1">
+                    <img src="./gif/funeral-pro2_1.webp" alt="장례식 이미지 2" class="memorial-image" id="memorial-image-2">
+                    <img src="./gif/funeral-pro3_1.webp" alt="장례식 이미지 3" class="memorial-image" id="memorial-image-3">
+                    <img src="./gif/funeral-pro4_1.webp" alt="장례식 이미지 4" class="memorial-image" id="memorial-image-4">
                 </div>
             </div>
             <div class="cell memorial-steps-cell">
