--- a/service.html
+++ b/service.html
@@ -70,13 +70,13 @@
                 <span class="fade-box scroll-hidden">
                     <div class="service-image-section">
                         <div class="service-image active" id="service-image-1">
-                            <img src="./gif/service01.gif" alt="서비스 이미지 1" class="service-img" />
+                            <img src="./gif/service01.webp" alt="서비스 이미지 1" class="service-img" />
                         </div>
                         <div class="service-image" id="service-image-2">
-                            <img src="./gif/service02.gif" alt="서비스 이미지 2" class="service-img" />
+                            <img src="./gif/service02.webp" alt="서비스 이미지 2" class="service-img" />
                         </div>
                         <div class="service-image" id="service-image-3">
-                            <img src="./gif/service03.gif" alt="서비스 이미지 3" class="service-img" />
+                            <img src="./gif/service03.webp" alt="서비스 이미지 3" class="service-img" />
                         </div>
                     </div>
                 </span>
@@ -222,7 +222,7 @@
             <div class="cell final-image-cell">
                 <span class="fade-box scroll-hidden">
                     <div class="final-image-container">
-                        <img src="./gif/first-last.gif" alt="마지막 큰 이미지" class="final-img" />
+                        <img src="./gif/first-last.webp" alt="마지막 큰 이미지" class="final-img" />
                     </div>
                 </span>
             </div>
