--- a/weding.html
+++ b/weding.html
@@ -66,21 +66,21 @@
             <div class="main-image-section">
               <div class="main-image active" id="main-image-1">
                 <img
-                  src="./gif/wedding-1.gif"
+                  src="./gif/wedding-1.webp"
                   alt="축의금 보내기"
                   class="tab-image"
                 />
               </div>
               <div class="main-image" id="main-image-2">
                 <img
-                  src="./gif/wedding-2.gif"
+                  src="./gif/wedding-2.webp"
                   alt="축하메세지"
                   class="tab-image"
                 />
               </div>
               <div class="main-image" id="main-image-3">
                 <img
-                  src="./gif/wedding-3.gif"
+                  src="./gif/wedding-3.webp"
                   alt="타임캡슐"
                   class="tab-image"
                 />
@@ -190,23 +190,23 @@
             <img
               alt="결혼식 이미지 1"
               class="memorial-image active"
-              src="./gif/wedding-pro1_1.gif"
+              src="./gif/wedding-pro1_1.webp"
               id="memorial-image-1"
             />
             <img
-              src="./gif/wedding-pro2_1.gif"
+              src="./gif/wedding-pro2_1.webp"
               alt="결혼식 이미지 2"
               class="memorial-image"
               id="memorial-image-2"
             />
             <img
-              src="./gif/wedding-pro3_1.gif"
+              src="./gif/wedding-pro3_1.webp"
               alt="결혼식 이미지 3"
               class="memorial-image"
               id="memorial-image-3"
             />
             <img
-              src="./gif/wedding-pro4_1.gif"
+              src="./gif/wedding-pro4_1.webp"
               alt="결혼식 이미지 4"
               class="memorial-image"
               id="memorial-image-4"
