--- a/app.html
+++ b/app.html
@@ -61,28 +61,28 @@
                     <div class="feature-box">
                         <div class="feature-img-wrap">
                             <img src="./img/app/app-1-thumb.png" alt="역대 행사 모아보기" class="feature-static">
-                            <img src="./img/app/app-1.gif" alt="역대 행사 모아보기 애니메이션" class="feature-gif">
+                            <img src="./img/app/app-1.webp" alt="역대 행사 모아보기 애니메이션" class="feature-gif">
                         </div>
                         <div class="feature-bar">역대 행사 모아보기</div>
                     </div>
                     <div class="feature-box">
                         <div class="feature-img-wrap">
                             <img src="./img/app/app-2-thumb.png" alt="간편하게 시작하기" class="feature-static">
-                            <img src="./img/app/app-2.gif" alt="간편하게 시작하기 애니메이션" class="feature-gif">
+                            <img src="./img/app/app-2.webp" alt="간편하게 시작하기 애니메이션" class="feature-gif">
                         </div>
                         <div class="feature-bar">간편하게 시작하기</div>
                     </div>
                     <div class="feature-box">
                         <div class="feature-img-wrap">
                             <img src="./img/app/app-3-thumb.png" alt="디지털 방명록/앨범 모아보기" class="feature-static">
-                            <img src="./img/app/app-3.gif" alt="디지털 방명록/앨범 모아보기 애니메이션" class="feature-gif">
+                            <img src="./img/app/app-3.webp" alt="디지털 방명록/앨범 모아보기 애니메이션" class="feature-gif">
                         </div>
                         <div class="feature-bar">디지털 방명록/앨범 모아보기</div>
                     </div>
                     <div class="feature-box">
                         <div class="feature-img-wrap">
                             <img src="./img/app/app-4-thumb.png" alt="경조사비 자동 보고서" class="feature-static">
-                            <img src="./img/app/app-4.gif" alt="경조사비 자동 보고서 애니메이션" class="feature-gif">
+                            <img src="./img/app/app-4.webp" alt="경조사비 자동 보고서 애니메이션" class="feature-gif">
                         </div>
                         <div class="feature-bar">경조사비 자동 보고서</div>
                     </div>
@@ -140,10 +140,10 @@
 
             <div class="cell app-image-cell fade-box scroll-hidden">
                 <div class="app-image-wrapper">
-                    <img src="./gif/app-ani1.gif" alt="앱 화면 1" class="app-image active" id="app-image-1">
-                    <img src="./gif/app-ani2.gif" alt="앱 화면 2" class="app-image" id="app-image-2">
-                    <img src="./gif/app-ani3.gif" alt="앱 화면 3" class="app-image" id="app-image-3">
-                    <img src="./gif/app-ani4.gif" alt="앱 화면 4" class="app-image" id="app-image-4">
+                    <img src="./gif/app-ani1.webp" alt="앱 화면 1" class="app-image active" id="app-image-1">
+                    <img src="./gif/app-ani2.webp" alt="앱 화면 2" class="app-image" id="app-image-2">
+                    <img src="./gif/app-ani3.webp" alt="앱 화면 3" class="app-image" id="app-image-3">
+                    <img src="./gif/app-ani4.webp" alt="앱 화면 4" class="app-image" id="app-image-4">
                 </div>
             </div>
             <div class="cell"></div>
