큰 이미지 파일 lazuloding

--- a/firstbirthday.html
+++ b/firstbirthday.html
@@ -65,25 +65,13 @@
           <span class="fade-box scroll-hidden">
             <div class="main-image-section">
               <div class="main-image active" id="main-image-1">
-                <img
-                  src="./gif/first-1.webp"
-                  alt="축하금 보내기"
-                  class="tab-image"
-                />
+                <img data-src="./gif/first-1.webp" alt="축하금 보내기" class="tab-image" />
               </div>
               <div class="main-image" id="main-image-2">
-                <img
-                  src="./gif/first-2.webp"
-                  alt="축하메세지"
-                  class="tab-image"
-                />
+                <img data-src="./gif/first-2.webp" alt="축하메세지" class="tab-image" />
               </div>
               <div class="main-image" id="main-image-3">
-                <img
-                  src="./gif/first-3.webp"
-                  alt="위시리스트"
-                  class="tab-image"
-                />
+                <img data-src="./gif/first-3.webp" alt="위시리스트" class="tab-image" />
               </div>
             </div>
           </span>
@@ -141,11 +129,7 @@
         <div class="cell large-content-cell">
           <span class="fade-box scroll-hidden">
             <div class="visual-stack">
-              <img
-                src="./img/firstbirthday/kiosk.png"
-                alt="키오스크 이미지"
-                class="kiosk-img"
-              />
+              <img data-src="./img/firstbirthday/kiosk.png" alt="키오스크 이미지" class="kiosk-img" />
               <div class="visual-desc">
                 <h2>감동은 더하고<br />실수는 줄입니다</h2>
                 <p>
@@ -176,30 +160,10 @@
         <div class="cell"></div>
         <div class="cell memorial-image-cell fade-box scroll-hidden">
           <div class="memorial-image-wrapper">
-            <img
-              src="./gif/first-pro1_1.webp"
-              alt="돌잔치 이미지 1"
-              class="memorial-image active"
-              id="memorial-image-1"
-            />
-            <img
-              src="./gif/first-pro2_1.webp"
-              alt="돌잔치 이미지 2"
-              class="memorial-image"
-              id="memorial-image-2"
-            />
-            <img
-              src="./gif/first-pro3_1.webp"
-              alt="돌잔치 이미지 3"
-              class="memorial-image"
-              id="memorial-image-3"
-            />
-            <img
-              src="./gif/first-pro4_1.webp"
-              alt="돌잔치 이미지 4"
-              class="memorial-image"
-              id="memorial-image-4"
-            />
+            <img data-src="./gif/first-pro1_1.webp" alt="돌잔치 이미지 1" class="memorial-image active" id="memorial-image-1" />
+            <img data-src="./gif/first-pro2_1.webp" alt="돌잔치 이미지 2" class="memorial-image" id="memorial-image-2" />
+            <img data-src="./gif/first-pro3_1.webp" alt="돌잔치 이미지 3" class="memorial-image" id="memorial-image-3" />
+            <img data-src="./gif/first-pro4_1.webp" alt="돌잔치 이미지 4" class="memorial-image" id="memorial-image-4" />
           </div>
         </div>
         <div class="cell memorial-steps-cell">
